--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     
     <body>
       <h1>Hello there.</h1>
-      <p>Chesus Crust</p>
+      <p>Daniel, Mike an Aaron spillen LOL.</p>
     </body>
     
 </html> 
