--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     
     <body>
       <h1>Hello there.</h1>
-      <p>Place holder</p>
+      <p>Daniel</p>
+        <img src="\images\emoticons\cool.png">
     </body>
     
 </html> 
