--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
       <h1>Hello there.</h1>
       <p>Daniel</p>
-        <img src="daniel.jpeg">
+        <!--<img src="daniel.jpeg">-->
     </body>
     
 </html> 
