--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <html>
     <head>
-      <title>AaronAaronAaronAaronAaronAaronAaronAaronAaronAaronAaronAaronAaron</title>
+      <title>Aaron D. Conrardy</title>
     </head>
     
     <body>
-      <h1>Hello there.</h1>
-      <p>Daniel</p>
-        <img src="/daniel.jpg">
+      <h1>Hello there. </h1>
+      <p>I am Aaron D. Conrardy and a computer scientist. I am almost done with my Master's degree from the RWTH.</p>
     </body>
     
 </html> 
