--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="container mt-2">
       <div id="main-title" class="rounded px-2">
         <h1>Welcome</h1>
-        <a href="http://lakhoune.com" class="mr-1">http://lakhoune.com</a> is
+        <a href="http://conrardy.info" class="mr-1">http://conrardy.info</a> is
         owned by Ben Lakhoune
       </div>
 
