--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
     <link rel="stylesheet" href="style.css" />
 
-    <title>Lakhoune</title>
+    <title>Conrardy</title>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
@@ -52,7 +52,7 @@
       <div id="main-title" class="rounded px-2">
         <h1>Welcome</h1>
         <a href="http://conrardy.info" class="mr-1">http://conrardy.info</a> is
-        owned by Ben Lakhoune
+        owned by Conrardy
       </div>
 
       <hr />
