--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Lakhoune</title>
+    <title>Conrardy</title>
     <base href="/" />
     <meta
       http-equiv="Cache-control"
