--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
     <link rel="stylesheet" href="style.css" />
 
-    <title>Conrardy</title>
+    <title>Lakhoune</title>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
@@ -51,8 +51,8 @@
     <div class="container mt-2">
       <div id="main-title" class="rounded px-2">
         <h1>Welcome</h1>
-        <a href="http://conrardy.info" class="mr-1">http://conrardy.info</a> is
-        owned by Conrardy
+        <a href="http://lakhoune.com" class="mr-1">http://lakhoune.com</a> is
+        owned by Ben Lakhoune
       </div>
 
       <hr />
