--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Conrardy</title>
+    <title>Lakhoune</title>
     <base href="/" />
     <meta
       http-equiv="Cache-control"
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="This is the landing page for conrardy.info. The page is currently owend by Aaron D. Conrardy."
+      content="This is the landing page for lakhoune.com. The page is currently owend by Ben Lakhoune."
     />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
